# PracticeProblem

./: Timer.txt
Plugins/: CMakeLists.txt
Plugins/cmake/: vcpkg_dependencies.cmake
Plugins/src/: TerrainDistanceCalculator.cpp  TerrainDistanceCalculator.h
Plugins/src/test/: Test_TerrainDistanceCalculator.cpp
PracticeProblemUnity/: .gitignore
PracticeProblemUnity/Assets/: Canvas.prefab  EventSystem.prefab
PracticeProblemUnity/Assets/Scenes/: Terrain.unity
PracticeProblemUnity/Assets/Scripts/: Plugin.cs  TerrainDistanceCalculator.cs
PracticeProblemUnity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
PracticeProblemUnity/WindowsBuild/TerrainDistance_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
